--- a/src/component/Tournaments.css
+++ b/src/component/Tournaments.css
@@ -57,6 +57,10 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-bottom: 0em;
+}
+.tournament-container:last-child {
+  margin-bottom: 0;
 }
 .tournaments a {
   text-decoration: none;
@@ -142,6 +146,7 @@
   }
   .tournament-container {
     flex-direction: row;
+    margin-bottom: 2em;
   }
   .fade {
     align-items: flex-start;
