--- a/src/component/Signup.css
+++ b/src/component/Signup.css
@@ -22,6 +22,12 @@
   width: 80%;
   text-align: left;
 }
+.signup-title span {
+  display: flex;
+  justify-content: center;
+  color: red;
+  font-weight: 600;
+}
 .signup-input:focus {
   border: 2px solid #00deab;
   transition: ease-in-out 0.3s;
