button to link & some styling

--- a/src/component/Profile.css
+++ b/src/component/Profile.css
@@ -38,6 +38,7 @@
   width: 40%;
   margin: 0 5px;
   max-width: 250px;
+  text-decoration: none;
 }
 .profile-button-chat:hover {
   background: #00dbae;
