--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -55,11 +55,26 @@
   transition: all 0.3s ease;
 }
 
+.chat-username {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.back-button {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
+
 @media screen and (min-width: 976px) {
   .navbar-responsive {
     height: 60px;
   }
   .menuicon {
     display: none;
+  }
+  .chat-username {
+    padding-left: 200px;
   }
 }
