--- a/src/component/LeaderboardGroup.css
+++ b/src/component/LeaderboardGroup.css
@@ -10,6 +10,7 @@
   margin: 10px auto 0;
   border: 0.8px rgba(255, 255, 255, 0.288) solid;
   cursor: pointer;
+  outline: none;
 }
 .leaderboard-group:hover {
   box-shadow: 0px 4px 5px 2px rgba(0, 0, 0, 0.26);
