--- a/src/component/ChatList.css
+++ b/src/component/ChatList.css
@@ -26,8 +26,15 @@
   width: 100%;
   border-bottom: 1px solid rgb(87, 87, 87);
   padding-bottom: 10px;
+  position: relative;
 }
-
+.chatList-time {
+  position: absolute;
+  right: 5px;
+  bottom: 2px;
+  color: rgba(255, 255, 255, 0.425);
+  font-size: 12px;
+}
 @media screen and (min-width: 600px) {
   .chatList {
     margin: 5em auto 0;
