--- a/src/component/Notification.css
+++ b/src/component/Notification.css
@@ -2,3 +2,30 @@
   margin: 4em auto 0;
   width: 96%;
 }
+
+.notification-wraper {
+  display: flex;
+  margin-bottom: 20px;
+  text-decoration: none;
+  transition: 0.3s all ease-in-out;
+}
+.notification-wraper:hover {
+  background-color: #ddd9d918;
+}
+
+.notification-detail {
+  margin-left: 10px;
+  width: 100%;
+}
+.notification-detail p {
+  line-height: 1.6;
+}
+
+.notification-sender {
+  font-weight: bold;
+}
+
+.notification-time {
+  font-size: 12px;
+  color: #ffffff6c;
+}
