--- a/src/component/Notification.css
+++ b/src/component/Notification.css
@@ -29,3 +29,13 @@
   font-size: 12px;
   color: #ffffff6c;
 }
+
+.notification-action {
+  background-color: #2d303e;
+  width: fit-content;
+  padding: 5px;
+  border-radius: 10px;
+  color: white;
+  margin-right: 10px;
+  font-size: 14px;
+}
