--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,14 @@ textarea {
   -webkit-tap-highlight-color: transparent;
 }
 .main-content-wraper {
-  width: (100% - 200px);
+  width: (100% - 280px);
   margin-left: 0px;
+  margin-top: 50px;
   transition: all 0.3s ease;
 }
 .container {
   padding-bottom: 20px;
-  margin: 0 auto 1em;
+  margin: 0 auto 5em;
   width: 95%;
   background: #2d303e;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
@@ -146,7 +147,8 @@ table td {
 
   .main-content-wraper {
     max-width: 1500px;
-    margin-left: 200px;
+    margin-left: 250px;
+    margin-top: 60px;
   }
 
   .participant-details {
@@ -155,5 +157,9 @@ table td {
     align-items: center;
     width: 350px;
     height: 50px;
+  }
+
+  .container {
+    margin: 0 auto 1em;
   }
 }
