--- a/src/component/ChatList.css
+++ b/src/component/ChatList.css
@@ -1,7 +1,7 @@
 .chatList {
-  margin: 4em auto 0;
+  margin: 60px auto;
   width: 95%;
-  height: 100vh;
+  height: 100%;
 }
 
 .chatList-chat {
@@ -34,9 +34,4 @@
   bottom: 2px;
   color: rgba(255, 255, 255, 0.425);
   font-size: 12px;
-}
-@media screen and (min-width: 600px) {
-  .chatList {
-    margin: 5em auto 0;
-  }
 }
