--- a/src/component/Prize.css
+++ b/src/component/Prize.css
@@ -1,25 +1,11 @@
-.tourneyInfoPrize {
-  padding-bottom: 20px;
-  margin: 0 auto;
-  margin-bottom: 1em;
-  width: 95%;
-  background: #2d303e;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.tourneyInfoPrize p {
+.container > p {
   font-size: 12px;
   margin-top: 20px;
   margin-bottom: 0;
   padding: 10px;
+  text-align: center;
 }
-.tourneyInfoPrize p span {
+.container > p span {
   color: #00deab;
 }
 .prize {
