--- a/src/component/SideBar.css
+++ b/src/component/SideBar.css
@@ -18,7 +18,7 @@
 
 .sidebar a {
   transition: all ease-in-out 0.3s;
-  color: #fff;
+  color: #ffffffb4;
   font-size: 14px;
   text-decoration: none;
 }
